[package]
name = "timetracker"
version = "0.1.0"
authors = ["Vegard Skui <me@vegardskui.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/VegardSkui/timetracker"
description = "Time tracking on the command line."
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
chrono = "0.4"
env_logger = "0.8"
log = "0.4"
once_cell = "1.8"
structopt = "0.3"
